testcrate/ui/unresolved-type.stderr
error[E0412]: cannot find type `A` in this scope
 --> $DIR/unresolved-type.rs:8:30
  |
8 | fn foo() -> impl Future<Item=A, Error=u32> {
  |                              ^ not found in this scope
  |
  = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error[E0412]: cannot find type `A` in this scope
  --> $DIR/unresolved-type.rs:13:31
   |
13 | fn foos() -> impl Stream<Item=A, Error=u32> {
   |                               ^ not found in this scope
   |
   = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error: aborting due to 2 previous errors

